/*
Copyright IBM Corp. 2016 All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

		 http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

Modified java_package and other contents by Dingxuan on 2018-03-13
*/
syntax = "proto3";

option java_package = "org.bcia.javachain.protos.node";
option go_package = "github.com/hyperledger/fabric/protos/peer";

package protos;

import "node/proposal.proto";
import "node/proposal_response.proto";

message NodeID {
    string name = 1;
}

message NodeEndpoint {
    NodeID id = 1;
    string address = 2;
}

service Endorser {
	rpc ProcessProposal(SignedProposal) returns (ProposalResponse) {}
}
